# eclss

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  build.rs  flake.nix  justfile  rust-toolchain.toml  sdkconfig.defaults  shell.nix  test.out
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: BUILD.md  README.md  sizetuning.txt
eclss/: Cargo.toml
eclss-esp32/: Cargo.toml  build.rs  partitions.c3.csv  sdkconfig.defaults
eclss-esp32/src/: atomic.rs  http.rs  lib.rs  main.rs  metric.rs  net.rs  retry.rs  sensor.rs
eclss-web/: Cargo.toml  index.html
eclss-web/.cargo/: .config.toml
eclss-web/assets/: bulma-0.9.3.min.css
eclss-web/src/: lib.rs  main.rs
eclss/src/: dto.rs
pmsa003i/: Cargo.toml  README.md
pmsa003i/src/: lib.rs
scripts/: flash.sh  run-wokwi.sh
src/: actor.rs  atomic.rs  bme680.rs  http.rs  lib.rs  logger.rs  main.rs  metric.rs  metrics.rs  net.rs  pmsa003i.rs  registry.rs  retry.rs  scd30.rs  sensor.rs  sgp30.rs  units.rs  wifi.rs  ws2812.rs
src/http/: index.html
src/sensor/: ens160.rs  pmsa003i.rs  scd30.rs  sgp30.rs  status.rs
viz/: grafana.json
