# cargo-features = ["per-package-target"]

[workspace]

resolver = "2"
members = ["eclss-esp32"]
exclude = ["eclss-web"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
incremental = false

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on flash
opt-level = "z"
lto = "fat"
codegen-units = 1
incremental = false
