# cargo-features = ["per-package-target"]

[workspace]
resolver = "2"
members = ["eclss", "eclss-esp32"]
# exclude web from the workspace because it's built with a different target
exclude = ["eclss-web"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
incremental = false

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on flash
opt-level = "z"
lto = "fat"
codegen-units = 1
incremental = false
