[workspace]
members = [
    ".",
    "pmsa003i",
]
resolver = "2"

[package]
name = "eclss"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2021"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
incremental = false

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on flash
opt-level = "z"
lto = "fat"
codegen-units = 1
incremental = false

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = { version = "1", default-features = false }
bosch-bme680 = "0.1.0"
channel-bridge = { version = "0.3", default-features = false, features = [
    "notification",
    "nightly",
    "embedded-svc",
] }
esp-idf-sys = { version = "0.33.0", features = ["binstart"] }
esp-idf-hal = { version = "0.41.0", features = [
    "edge-executor",
    "embassy-sync",
    "critical-section",
    "std",
] }
esp-idf-svc = { version = "0.46", features = [
    "alloc",
    "experimental",
    "nightly",
    "embassy-time-isr-queue",
] }
embassy-time = "0.1.0"
embedded-svc = { version = "0.25", features = [
    "alloc",
    "nightly",
    "experimental",
] }
# embedded-io = { version = "0.3.0" }
edge-executor = { version = "0.3.0" }
ens160 = "0.1.2"
futures = { version = "0.3.25" }
heapless = "0.7.16"
log = { version = "0.4", features = ["max_level_info"] }
sensor-scd30 = { version = "0.4.0", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1"
shared-bus = { version = "0.2.0", features = ["std"] }
# maitake = { git = "https://github.com/hawkw/mycelium", features = ["alloc", "no-cache-pad"]}
thingbuf = "0.1.3"
tinymetrics = { git = "https://github.com/hawkw/tinymetrics", default-features = false, features = [
    "serde",
    "std",
]}
pmsa003i = { path = "pmsa003i" }
sgp30 = "0.3.1"

[build-dependencies]
embuild = "0.31.0"

# [patch.crates-io]
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }


[package.metadata.espflash]
partition_table = "partitions.c3.csv"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
esp_idf_sdkconfig = "sdkconfig"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]
# native builder only
esp_idf_version = "branch:release/v4.4"
# pick and choose which ESP-IDF components are included, to try and reduce flash
# size.
# NOTE: if changing these, changes are not reflected unless  you do a `cargo clean`.
esp_idf_components = [
    # "esp32c3",
    # "esp_common",
    "esp_http_client",
    "esp_http_server",
    "esp_https_server",
    "esp_wifi",
    "log",
    "hal",
    "nvs_flash",
    # "pthread",
    # not actually using the websocket client, but esp-idf-svc appears to not
    # build without it...
    "esp_websocket_client",
    "espcoredump",
    "mdns",
]
